# QuikUI

./: .gitignore  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yaml
example/: __init__.py
example/templates/: AppBase.html  CustomPage.html  Dashboard.html  Datapoint.html  InvalidTitleError.html  Notification.html  RequestValidationError.html  Task.html  Task.table.html  TaskInProgressError.toast.html  base.html  tasks.html
examples/: basic.py
quikui/: __init__.py  components.py  decorators.py  dependencies.py  error_handlers.py  exceptions.py  forms.py  jinja.py  sse.py  types.py  utils.py
quikui/templates/: Anchor.html  AppBase.html  Button.html  CheckboxInput.html  Div.html  Form.html  FormInput.html  HTTPException.html  Heading.html  Image.html  List.html  Page.html  Paragraph.html  RadioInput.html  RequestValidationError.html  SelectionInput.html  Span.html  _MultiItemComponent.html  _SingleContentComponent.html
tests/: README.md  test_core.py  test_error_handlers.py  test_filters.py  test_sqlmodel.py  test_sse.py
